Fixed overflow problem

--- a/src/components/overview/Filters/styles.scss
+++ b/src/components/overview/Filters/styles.scss
@@ -2,13 +2,16 @@
 
 .filters-list {
   height: auto;
-    .filter-dropdown {
-        height: 26px !important;
-        width: auto;
-    }
+  .filter-dropdown {
+      height: 26px !important;
+      width: auto;
+  }
   
   .filter-button {
     height: 49px !important;  
     font-size: 14px !important;
+ }
+ ul {
+   overflow: hidden;
  }
 }
